<resources>
    <string name="app_name">Media Player</string>
    <string name="videos">Videos</string>
    <string name="audios">Audios</string>
    <string name="albums">Albums</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="open">Open</string>
    <string name="volume">Volume</string>
    <string name="video_feed">Video Feed</string>
    <string name="video_default_name">Video</string>
    <string name="add_to_album">Add to Album</string>
    <string name="added_to_album">Added to album</string>
    <string name="already_in_album">Already in album</string>
    <string name="create_album">Create album</string>
    <string name="create_new_album">Create new album</string>
    <string name="create">Create</string>
    <string name="album_name_hint">Album name</string>
    <string name="album_created">Album created</string>
    <string name="album_create_failed">Unable to create album</string>
    <string name="album_video_count">%1$d videos</string>
    <string name="no_albums_found">No custom albums yet.</string>
    <string name="no_media_found">No media files found in storage.</string>
    <string name="permission_required">Storage permission is required to display media files.</string>
    <string name="video_thumbnail">Video thumbnail</string>
    <string name="audio_thumbnail">Audio thumbnail</string>
    <string name="playback_error">Unable to play this media file.</string>
</resources>
